tests/baselines/reference/genericCallWithObjectTypeArgsAndStringIndexer.errors.txt
genericCallWithObjectTypeArgsAndStringIndexer.ts(8,13): error TS2454: Variable 'a' is used before being assigned.
genericCallWithObjectTypeArgsAndStringIndexer.ts(12,18): error TS2454: Variable 'b' is used before being assigned.
genericCallWithObjectTypeArgsAndStringIndexer.ts(17,18): error TS2454: Variable 'b' is used before being assigned.
genericCallWithObjectTypeArgsAndStringIndexer.ts(23,18): error TS2454: Variable 'b' is used before being assigned.


==== genericCallWithObjectTypeArgsAndStringIndexer.ts (4 errors) ====
    // Type inference infers from indexers in target type, no errors expected
    
    function foo<T>(x: T) {
        return x;
    }
    
    var a: { [x: string]: Date };
    var r = foo(a);
                ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    function other<T>(arg: T) {
        var b: { [x: string]: T };
        var r2 = foo(b); // T
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
    }
    
    function other2<T extends Date>(arg: T) {
        var b: { [x: string]: T };
        var r2 = foo(b);
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
        var d: Date = r2['hm']; // ok
    }
    
    function other3<T extends Date, U extends Date>(arg: T) {
        var b: { [x: string]: T };
        var r2 = foo(b);
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
        var d: Date = r2['hm']; // ok
        // BUG 821629
        //var u: U = r2['hm']; // ok
    }
    
    //function other3<T extends U, U extends Date>(arg: T) {
    //    var b: { [x: string]: T };
    //    var r2 = foo(b);
    //    var d: Date = r2['hm']; // ok
    //    // BUG 821629
    //    //var u: U = r2['hm']; // ok
    //}